lib_LTLIBRARIES = libclan30CSSLayout.la

libclan30CSSLayout_la_SOURCES = \
ComputedValues/css_computed_background.cpp \
ComputedValues/css_computed_border.cpp \
ComputedValues/css_computed_font.cpp \
ComputedValues/css_computed_margin.cpp \
ComputedValues/css_computed_flex.cpp \
ComputedValues/css_computed_values.cpp \
ComputedValues/css_computed_text.cpp \
ComputedValues/css_computed_padding.cpp \
ComputedValues/css_computed_table.cpp \
ComputedValues/css_computed_box.cpp \
ComputedValues/css_computed_outline.cpp \
ComputedValues/css_computed_misc.cpp \
ComputedValues/css_computed_list_style.cpp \
ComputedValues/css_computed_counter.cpp \
ComputedValues/css_computed_generic.cpp \
precomp.cpp \
PropertyValues/css_value_decoration_break.cpp \
PropertyValues/css_value_border_radius.cpp \
PropertyValues/css_value_border_image_width.cpp \
PropertyValues/css_value_font_size.cpp \
PropertyValues/css_value_justify_content.cpp \
PropertyValues/css_value_shadow.cpp \
PropertyValues/css_value_flex_shrink.cpp \
PropertyValues/css_value_flex_direction.cpp \
PropertyValues/css_value_counter_increment.cpp \
PropertyValues/css_value_outline_width.cpp \
PropertyValues/css_value_position.cpp \
PropertyValues/css_value_font_weight.cpp \
PropertyValues/css_value_text_indent.cpp \
PropertyValues/css_value_border_color.cpp \
PropertyValues/css_value_orphans.cpp \
PropertyValues/css_value_letter_spacing.cpp \
PropertyValues/css_value_text_decoration.cpp \
PropertyValues/css_value_color.cpp \
PropertyValues/css_value_border_collapse.cpp \
PropertyValues/css_value_font_family.cpp \
PropertyValues/css_value_text_transform.cpp \
PropertyValues/css_value_counter_reset.cpp \
PropertyValues/css_value_flex_grow.cpp \
PropertyValues/css_value_page_break_before.cpp \
PropertyValues/css_value_float.cpp \
PropertyValues/css_value_width.cpp \
PropertyValues/css_value_text_align.cpp \
PropertyValues/css_value_min_width.cpp \
PropertyValues/css_value_visibility.cpp \
PropertyValues/css_value_table_layout.cpp \
PropertyValues/css_value_background_origin.cpp \
PropertyValues/css_value_list_style_position.cpp \
PropertyValues/css_value_border_image_outset.cpp \
PropertyValues/css_value_flex_wrap.cpp \
PropertyValues/css_value_left.cpp \
PropertyValues/css_value_border_style.cpp \
PropertyValues/css_value_border_width.cpp \
PropertyValues/css_value_min_height.cpp \
PropertyValues/css_value_border_spacing.cpp \
PropertyValues/css_value_unicode_bidi.cpp \
PropertyValues/css_value_border_image_slice.cpp \
PropertyValues/css_value_align_items.cpp \
PropertyValues/css_value_white_space.cpp \
PropertyValues/css_value_list_style_image.cpp \
PropertyValues/css_value_line_height.cpp \
PropertyValues/css_value_right.cpp \
PropertyValues/css_value_background_image.cpp \
PropertyValues/css_value_vertical_align.cpp \
PropertyValues/css_value_caption_side.cpp \
PropertyValues/css_value_padding_width.cpp \
PropertyValues/css_value_direction.cpp \
PropertyValues/css_value_empty_cells.cpp \
PropertyValues/css_value_background_color.cpp \
PropertyValues/css_value_height.cpp \
PropertyValues/css_value_quotes.cpp \
PropertyValues/css_value_max_width.cpp \
PropertyValues/css_value_clip.cpp \
PropertyValues/css_value_align_content.cpp \
PropertyValues/css_value_font_variant.cpp \
PropertyValues/css_value_page_break_after.cpp \
PropertyValues/css_value_outline_style.cpp \
PropertyValues/css_value_list_style_type.cpp \
PropertyValues/css_value_outline_color.cpp \
PropertyValues/css_value_margin_width.cpp \
PropertyValues/css_value_background_attachment.cpp \
PropertyValues/css_value_background_repeat.cpp \
PropertyValues/css_value_flex_basis.cpp \
PropertyValues/css_value_cursor.cpp \
PropertyValues/css_value_border_image_source.cpp \
PropertyValues/css_value_content.cpp \
PropertyValues/css_value_background_clip.cpp \
PropertyValues/css_value_background_position.cpp \
PropertyValues/css_value_word_spacing.cpp \
PropertyValues/css_value_widows.cpp \
PropertyValues/css_value_overflow.cpp \
PropertyValues/css_value_z_index.cpp \
PropertyValues/css_value_background_size.cpp \
PropertyValues/css_value_page_break_inside.cpp \
PropertyValues/css_value_clear.cpp \
PropertyValues/css_value_font_style.cpp \
PropertyValues/css_value_top.cpp \
PropertyValues/css_value_max_height.cpp \
PropertyValues/css_value_align_self.cpp \
PropertyValues/css_value_bottom.cpp \
PropertyValues/css_value_order.cpp \
PropertyValues/css_value_border_image_repeat.cpp \
PropertyValues/css_value_generic.cpp \
PropertyValues/css_value_display.cpp \
PropertyParsers/Top/css_parser_top.cpp \
PropertyParsers/BackgroundRepeat/css_parser_background_repeat.cpp \
PropertyParsers/ListStyle/css_parser_list_style.cpp \
PropertyParsers/BorderWidth/css_parser_border_width.cpp \
PropertyParsers/Padding/css_parser_padding.cpp \
PropertyParsers/CaptionSide/css_parser_caption_side.cpp \
PropertyParsers/AlignContent/css_parser_align_content.cpp \
PropertyParsers/Color/css_parser_color.cpp \
PropertyParsers/BorderStyle/css_parser_border_style.cpp \
PropertyParsers/BorderLTRBStyle/css_parser_border_ltrb_style.cpp \
PropertyParsers/EmptyCells/css_parser_empty_cells.cpp \
PropertyParsers/FlexGrow/css_parser_flex_grow.cpp \
PropertyParsers/TableLayout/css_parser_table_layout.cpp \
PropertyParsers/Background/css_parser_background.cpp \
PropertyParsers/Shadow/css_parser_shadow.cpp \
PropertyParsers/Order/css_parser_order.cpp \
PropertyParsers/Left/css_parser_left.cpp \
PropertyParsers/ListStylePosition/css_parser_list_style_position.cpp \
PropertyParsers/FontVariant/css_parser_font_variant.cpp \
PropertyParsers/BackgroundPosition/css_parser_background_position.cpp \
PropertyParsers/Clear/css_parser_clear.cpp \
PropertyParsers/OutlineStyle/css_parser_outline_style.cpp \
PropertyParsers/Outline/css_parser_outline.cpp \
PropertyParsers/PageBreakBefore/css_parser_page_break_before.cpp \
PropertyParsers/Position/css_parser_position.cpp \
PropertyParsers/MaxHeight/css_parser_max_height.cpp \
PropertyParsers/BorderImageWidth/css_parser_border_image_width.cpp \
PropertyParsers/Quotes/css_parser_quotes.cpp \
PropertyParsers/Clip/css_parser_clip.cpp \
PropertyParsers/css_property_parser.cpp \
PropertyParsers/BorderRadiusCorner/css_parser_border_radius_corner.cpp \
PropertyParsers/BackgroundSize/css_parser_background_size.cpp \
PropertyParsers/Generic/css_parser_generic.cpp \
PropertyParsers/Float/css_parser_float.cpp \
PropertyParsers/TextIndent/css_parser_text_indent.cpp \
PropertyParsers/FlexWrap/css_parser_flex_wrap.cpp \
PropertyParsers/DecorationBreak/css_parser_decoration_break.cpp \
PropertyParsers/FontFamily/css_parser_font_family.cpp \
PropertyParsers/FontSize/css_parser_font_size.cpp \
PropertyParsers/WordSpacing/css_parser_word_spacing.cpp \
PropertyParsers/LetterSpacing/css_parser_letter_spacing.cpp \
PropertyParsers/ListStyleType/css_parser_list_style_type.cpp \
PropertyParsers/Visibility/css_parser_visibility.cpp \
PropertyParsers/MaxWidth/css_parser_max_width.cpp \
PropertyParsers/JustifyContent/css_parser_justify_content.cpp \
PropertyParsers/BackgroundAttachment/css_parser_background_attachment.cpp \
PropertyParsers/Flex/css_parser_flex.cpp \
PropertyParsers/FlexFlow/css_parser_flex_flow.cpp \
PropertyParsers/Direction/css_parser_direction.cpp \
PropertyParsers/UnicodeBidi/css_parser_unicode_bidi.cpp \
PropertyParsers/OutlineWidth/css_parser_outline_width.cpp \
PropertyParsers/CounterIncrement/css_parser_counter_increment.cpp \
PropertyParsers/AlignItems/css_parser_align_items.cpp \
PropertyParsers/Orphans/css_parser_orphans.cpp \
PropertyParsers/BorderSpacing/css_parser_border_spacing.cpp \
PropertyParsers/OutlineColor/css_parser_outline_color.cpp \
PropertyParsers/Margin/css_parser_margin.cpp \
PropertyParsers/Font/css_parser_font.cpp \
PropertyParsers/BorderImage/css_parser_border_image.cpp \
PropertyParsers/PaddingLTRB/css_parser_padding_ltrb.cpp \
PropertyParsers/PageBreakInside/css_parser_page_break_inside.cpp \
PropertyParsers/ListStyleImage/css_parser_list_style_image.cpp \
PropertyParsers/Widows/css_parser_widows.cpp \
PropertyParsers/Bottom/css_parser_bottom.cpp \
PropertyParsers/BorderColor/css_parser_border_color.cpp \
PropertyParsers/TextTransform/css_parser_text_transform.cpp \
PropertyParsers/FlexDirection/css_parser_flex_direction.cpp \
PropertyParsers/BackgroundColor/css_parser_background_color.cpp \
PropertyParsers/PageBreakAfter/css_parser_page_break_after.cpp \
PropertyParsers/BorderCollapse/css_parser_border_collapse.cpp \
PropertyParsers/Right/css_parser_right.cpp \
PropertyParsers/VerticalAlign/css_parser_vertical_align.cpp \
PropertyParsers/MinHeight/css_parser_min_height.cpp \
PropertyParsers/LineHeight/css_parser_line_height.cpp \
PropertyParsers/TextAlign/css_parser_text_align.cpp \
PropertyParsers/FlexShrink/css_parser_flex_shrink.cpp \
PropertyParsers/BorderLTRB/css_parser_border_ltrb.cpp \
PropertyParsers/MinWidth/css_parser_min_width.cpp \
PropertyParsers/MarginLTRB/css_parser_margin_ltrb.cpp \
PropertyParsers/Display/css_parser_display.cpp \
PropertyParsers/Overflow/css_parser_overflow.cpp \
PropertyParsers/Content/css_parser_content.cpp \
PropertyParsers/Width/css_parser_width.cpp \
PropertyParsers/FlexBasis/css_parser_flex_basis.cpp \
PropertyParsers/WhiteSpace/css_parser_white_space.cpp \
PropertyParsers/BorderImageSource/css_parser_border_image_source.cpp \
PropertyParsers/AlignSelf/css_parser_align_self.cpp \
PropertyParsers/Border/css_parser_border.cpp \
PropertyParsers/BorderRadius/css_parser_border_radius.cpp \
PropertyParsers/BackgroundImage/css_parser_background_image.cpp \
PropertyParsers/BorderLTRBColor/css_parser_border_ltrb_color.cpp \
PropertyParsers/CounterReset/css_parser_counter_reset.cpp \
PropertyParsers/BorderImageRepeat/css_parser_border_image_repeat.cpp \
PropertyParsers/BorderLTRBWidth/css_parser_border_ltrb_width.cpp \
PropertyParsers/css_property_parsers.cpp \
PropertyParsers/BorderImageSlice/css_parser_border_image_slice.cpp \
PropertyParsers/TextDecoration/css_parser_text_decoration.cpp \
PropertyParsers/FontWeight/css_parser_font_weight.cpp \
PropertyParsers/BackgroundClip/css_parser_background_clip.cpp \
PropertyParsers/BackgroundOrigin/css_parser_background_origin.cpp \
PropertyParsers/Cursor/css_parser_cursor.cpp \
PropertyParsers/ZIndex/css_parser_z_index.cpp \
PropertyParsers/Height/css_parser_height.cpp \
PropertyParsers/BorderImageOutset/css_parser_border_image_outset.cpp \
PropertyParsers/FontStyle/css_parser_font_style.cpp \
css_resource_cache.cpp \
CSSDocument/css_style_properties.cpp \
CSSDocument/css_document_impl.cpp \
CSSDocument/css_property.cpp \
CSSDocument/css_select_result.cpp \
CSSDocument/dom_select_node.cpp \
CSSDocument/css_document.cpp \
CSSDocument/css_document_sheet.cpp \
Layout/css_layout_object.cpp \
Layout/css_layout.cpp \
Layout/css_layout_node.cpp \
Layout/css_layout_text.cpp \
Layout/css_layout_element.cpp \
Layout/LayoutTree/css_replaced_layout.cpp \
Layout/LayoutTree/css_background_renderer.cpp \
Layout/LayoutTree/css_layout_tree_node.cpp \
Layout/LayoutTree/css_used_values.cpp \
Layout/LayoutTree/clan_image_stretch.cpp \
Layout/LayoutTree/css_layout_graphics.cpp \
Layout/LayoutTree/css_table_size_grid.cpp \
Layout/LayoutTree/InlineLayout/word_count.cpp \
Layout/LayoutTree/InlineLayout/render_layer_positioned.cpp \
Layout/LayoutTree/InlineLayout/css_inline_layout.cpp \
Layout/LayoutTree/InlineLayout/render_layer_inline.cpp \
Layout/LayoutTree/InlineLayout/calculate_top_down_heights.cpp \
Layout/LayoutTree/InlineLayout/get_cursor_box.cpp \
Layout/LayoutTree/InlineLayout/place_floats.cpp \
Layout/LayoutTree/InlineLayout/inline_generated_box.cpp \
Layout/LayoutTree/InlineLayout/layout_inline_blocks_and_floats.cpp \
Layout/LayoutTree/InlineLayout/add_content_margin_top.cpp \
Layout/LayoutTree/InlineLayout/layout_absolute_and_fixed_content.cpp \
Layout/LayoutTree/InlineLayout/render_layer_background.cpp \
Layout/LayoutTree/InlineLayout/generate_line.cpp \
Layout/LayoutTree/InlineLayout/prepare_children.cpp \
Layout/LayoutTree/InlineLayout/render_layer_floats.cpp \
Layout/LayoutTree/InlineLayout/layout_is_empty.cpp \
Layout/LayoutTree/InlineLayout/is_empty_line.cpp \
Layout/LayoutTree/InlineLayout/render_layer_non_inline.cpp \
Layout/LayoutTree/InlineLayout/set_component_geometry.cpp \
Layout/LayoutTree/InlineLayout/get_width.cpp \
Layout/LayoutTree/InlineLayout/align_line.cpp \
Layout/LayoutTree/InlineLayout/create_linebreak_opportunities.cpp \
Layout/LayoutTree/InlineLayout/layout_line.cpp \
Layout/LayoutTree/InlineLayout/find_content_box.cpp \
Layout/LayoutTree/css_intrinsic_values.cpp \
Layout/LayoutTree/css_layout_cursor.cpp \
Layout/LayoutTree/css_stacking_context.cpp \
Layout/LayoutTree/css_table_layout.cpp \
Layout/LayoutTree/css_border_renderer.cpp \
Layout/LayoutTree/css_block_formatting_context.cpp \
Layout/LayoutTree/css_layout_tree.cpp \
Layout/BoxTree/css_box_tree.cpp \
Layout/BoxTree/css_box_node.cpp \
Layout/BoxTree/css_box_object.cpp \
Layout/BoxTree/css_box_node_walker.cpp \
Layout/BoxTree/css_whitespace_eraser.cpp \
Layout/BoxTree/css_box_element.cpp \
Layout/BoxTree/css_box_text.cpp \
CSSTokenizer/css_tokenizer.cpp \
CSSTokenizer/css_tokenizer_impl.cpp

libclan30CSSLayout_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanCSSLayout)

libclan30CSSLayout_la_CXXFLAGS=$(clanCSSLayout_CXXFLAGS) $(extra_CFLAGS_clanCSSLayout)
# EOF #

