lib_LTLIBRARIES = libclan30Compute.la

libclan30Compute_la_SOURCES = \
compute_program_impl.cpp \
compute_sampler.cpp \
compute_event_impl.cpp \
compute_command_queue_impl.cpp \
compute_context.cpp \
opencl_bindings.cpp \
compute_event.cpp \
compute_command_queue.cpp \
precomp.cpp \
compute_buffer_impl.cpp \
compute_kernel_impl.cpp \
compute_context_impl.cpp \
compute_kernel.cpp \
compute_sampler_impl.cpp \
opencl_platform_bindings.cpp \
compute_memory_map.cpp \
compute_buffer.cpp \
compute_program.cpp \
setup_compute.cpp

libclan30Compute_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_Compute)

# EOF #
